--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_APIURL=http://localhost:8082
+REACT_APP_APIURL=https://api-sites.jquery.link
 REACT_APP_XAPIPASSWORD=DPpoyTVTKHBhegiRi87D
 
 #'https://api-sites.jquery.link/senddatatofrontend',
