--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-REACT_APP_APIURL=http://localhost:8082
+REACT_APP_APIURL=https://api-sites.jquery.link
 REACT_APP_XAPIPASSWORD=DPpoyTVTKHBhegiRi87D
 
 #'https://api-sites.jquery.link/senddatatofrontend',
 #'http://localhost:8082/senddatatofrontend',
+# wQ5Upew5HqBe65ZEXqqp
