--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.11.0",
-    "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-data-grid": "^7.23.5",
     "@mui/x-date-pickers": "^5.0.11",
     "@mui/x-date-pickers-pro": "^5.0.11",
     "@testing-library/jest-dom": "^5.17.0",
