--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-json-tree": "^0.19.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-virtuoso": "^4.10.4",
+    "react-window": "^1.8.11",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.16",
-    "react-refresh": "^0.17.0"
+    "react-refresh": "^0.17.0",
+    "sass-loader": "^13.3.3"
   }
 }
