--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_APIURL=http://localhost:8082
+REACT_APP_APIURL=https://api-sites.jquery.space
 REACT_APP_XAPIPASSWORD=DPpoyTVTKHBhegiRi87D
 
-#'https://api-sites.jquery.link/senddatatofrontend',
+#'https://api-sites.jquery.space/senddatatofrontend',
 #'http://localhost:8082/senddatatofrontend',
 # wQ5Upew5HqBe65ZEXqqp
 
